--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autosuggest-highlight": "^3.2.1",
     "deck.gl": "^8.8.6",
+    "mapbox-gl": "^2.9.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.18",
