--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "autosuggest-highlight": "^3.2.1",
+    "bootstrap": "^5.2.1",
     "deck.gl": "^8.8.6",
     "mapbox-gl": "^2.9.2",
+    "p-debounce": "^4.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.18",
     "react-router-dom": "^6.3.0",
