--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-map-gl": "^7.0.18",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-use-cookie": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
