--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@testing-library/user-event": "^13.5.0",
     "autosuggest-highlight": "^3.2.1",
     "bootstrap": "^5.2.1",
+    "d3": "^7.8.0",
     "deck.gl": "^8.8.20",
     "mapbox-gl": "^2.11.0",
     "p-debounce": "^4.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.19",
     "react-router-dom": "^6.3.0",
